Fix onBlur on mobile Select issue, refactor HearSelect component

--- a/source/components/Forms/elements/CustomSelector/styles.m.css
+++ b/source/components/Forms/elements/CustomSelector/styles.m.css
@@ -1,4 +1,4 @@
-.hearSelector {
+.customSelector {
     & div {
         font-size: 15px;
     }
